添加注释，更改out文件路径key，更改数据库类型key及默认值

--- a/nuc_data_tool/config.toml
+++ b/nuc_data_tool/config.toml
@@ -1,17 +1,27 @@
 [data_extraction]
+# 包括全部中间结果
 is_all_step = true
 
 [data_extraction.keys_of_rows]
+# 物理量数据区定位起止关键字
+# 核素密度
 isotope = ["Nuclide Density", "Total  "]
+# 放射性活度
 radioactivity = ["Radioactivity", "Total  "]
+# 中子吸收率
 absorption = ["Absorption", "Total  "]
+# 裂变率
 fission = ["Fission", "Total  "]
+# 衰变热
 decay_heat = ["Decay Heat", "Total  "]
+# 伽马能谱
 gamma_spectra = ["Gamma-ray", "Total  "]
 
 
 [file_path]
-test_file_path = "./output_files"
+# nuit输出所在文件夹
+out_file_path = "./out"
+# 处理结果所在文件夹
 result_file_path = "./result"
 
 
@@ -19,8 +29,8 @@ result_file_path = "./result"
 model_path = "./model/nuc_all_steps_isotope_model.pkl"
 
 [database]
-# 选择数据库（目前支持 mysql, postgresql, sqlite）
-chosen_db = "postgresql"
+# 数据库类型（目前支持 mysql, postgresql, sqlite）
+db_type = "sqlite"
 
 [database.sqlite]
 path = "./data.sqlite"
@@ -43,9 +53,9 @@ dbname = "db"
 [nuclide_list]
 all = 'all'
 None = 'None'
-# Np237 衰变链核素
+# Np237 纯衰变
 decay = ['Np237', 'Pa233', 'U233', 'Th229', 'Ra225', 'Ac225', 'Fr221', 'At217', 'Bi213', 'Po213', 'Tl209', 'Pb209', 'Bi209', 'Tl205']
 # UO2 裂变产物及轻核
 fission_light = ['U233', 'Ce142', 'Tc99', 'Nd144', 'I129', 'U238', 'Gd155', 'Am241', 'Pm149', 'Am242', 'Pr144', 'La139', 'Ba138', 'Np239', 'U236', 'I135', 'Cm242', 'Sm150', 'Sm149', 'Sn126', 'Y91', 'Np237', 'Eu153', 'Cm244', 'Pu239', 'Se79', 'Kr83', 'Xe136', 'Ag109', 'U234', 'Xe135', 'Ru101', 'Mo95', 'Pa233', 'U239', 'Sr90', 'Cs133', 'Sm147', 'Cs135', 'U235', 'Zr94']
-# short-lives nuclide, 燃耗主要核素，重点观察Cs134、Cm242、Cm244，短寿核素，尤其是第一燃耗步结果
+# 燃耗主要核素，重点观察Cs134、Cm242、Cm244等短半衰期核素，尤其是第一燃耗步结果
 short_lives = ['Kr85', 'Kr85m1', 'Kr87', 'Kr88', 'Xe131m1', 'Xe133', 'Xe133m1', 'Xe135', 'Xe135m1', 'I130', 'I131', 'I132', 'I133', 'I134', 'I135', 'Rb86', 'Cs134', 'Cs136', 'Cs137', 'Cs138', 'Sb127', 'Te127', 'Te127m1', 'Te131m1', 'Te132', 'Mo99', 'Tc99m1', 'Ru103', 'Ru105', 'Rh105', 'Ru106', 'Sr89', 'Sr90', 'Sr91', 'Sr92', 'Ba139', 'Ba140', 'Ce141', 'Ce143', 'Ce144', 'Pu238', 'Pu239', 'Pu240', 'Pu241', 'Np239', 'Y90', 'Y91', 'Y92', 'Y93', 'Zr95', 'Nb95', 'Zr97', 'La140', 'La141', 'La142', 'Pr143', 'Nd147', 'Am241', 'Cm242', 'Cm244']
